[package]
name = "bevy_sk"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
bevy_mod_openxr.workspace = true
bevy_mod_xr.workspace = true
bevy_xr_utils.workspace = true
bitflags = "2.6.0"

[dev-dependencies]
bevy_panorbit_camera = "0.19.3"

[workspace.dependencies]
bevy = "0.14.2"
bevy_mod_openxr = { git = "https://github.com/awtterpip/bevy_oxr", rev = "302a455fb39d8e9fb3781c2f6afc4765c53d3b14"}
bevy_mod_xr = { git = "https://github.com/awtterpip/bevy_oxr", rev = "302a455fb39d8e9fb3781c2f6afc4765c53d3b14" }
bevy_xr_utils = { git = "https://github.com/awtterpip/bevy_oxr", rev = "302a455fb39d8e9fb3781c2f6afc4765c53d3b14" }