[package]
name = "bevy_sk"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
bevy_mod_openxr.workspace = true
bevy_mod_xr.workspace = true
bevy_xr_utils.workspace = true
bitflags = "2.6.0"

[dev-dependencies]
bevy_panorbit_camera = "0.19.3"

[workspace.dependencies]
bevy = "0.14.2"
bevy_mod_openxr = { git = "https://github.com/awtterpip/bevy_oxr.git", rev = "c0be012b9dcc6a501a87aff9b7eafb3d886d8c9e"}
bevy_mod_xr = { git = "https://github.com/awtterpip/bevy_oxr.git", rev = "c0be012b9dcc6a501a87aff9b7eafb3d886d8c9e"}
bevy_xr_utils = { git = "https://github.com/awtterpip/bevy_oxr.git", rev = "c0be012b9dcc6a501a87aff9b7eafb3d886d8c9e"}
